Crash with --debug reading userpref.blend #37488

Closed
opened 2013-11-16 12:54:33 +01:00 by Howard Trickey · 16 comments
Member

System Information
MacOS 10.9

Blender Version
Broken: Blender 2.69 pre git migration
Worked: Blender 2.69 pre git migration

Short description of error
Starting up blender on MacOS with --debug argument and
my old (pre-git migration) startup prefs causes a crash.
The main->build_commit_timestamp is
7956574615470342144
which seems suspicious.

Exact steps for others to reproduce the error

I guess you have to put the attached file in the userprefs area,
but maybe any old userprefs tickles this bug on a Mac.

Here is stack trace:

  • 0 0x00007fff8db4f6a6 in _st_fmt ()
  • 1 0x00007fff8db4efec in strftime_l ()
  • 2 0x0000000100cfbb3e in do_versions at /Users/trickey/src/blender/blender/source/blender/blenloader/intern/readfile.c:7935
  • 3 0x0000000100cfaa11 in blo_read_file_internal at /Users/trickey/src/blender/blender/source/blender/blenloader/intern/readfile.c:10039
  • 4 0x0000000100cf67f3 in BLO_read_from_file at /Users/trickey/src/blender/blender/source/blender/blenloader/intern/readblenentry.c:267
  • 5 0x0000000100ab6b24 in BKE_read_file_userdef at /Users/trickey/src/blender/blender/source/blender/blenkernel/intern/blender.c:508
  • 6 0x000000010001bc0f in wm_homefile_read at /Users/trickey/src/blender/blender/source/blender/windowmanager/intern/wm_files.c:570
  • 7 0x000000010001e475 in WM_init at /Users/trickey/src/blender/blender/source/blender/windowmanager/intern/wm_init_exit.c:162

8 0x0000000100006435 in main at /Users/trickey/src/blender/blender/source/creator/creator.c:1638

I looked at filepath in BLO_read_from_file and its value is
filepath const unsigned char * "/Users/trickey/Library/Application Support/Blender/2.69/config/userpref.blend" 0x00007fff5fbff0b0

I attach that file.
userpref.blend

**System Information** MacOS 10.9 **Blender Version** Broken: Blender 2.69 pre git migration Worked: Blender 2.69 pre git migration **Short description of error** Starting up blender on MacOS with --debug argument and my old (pre-git migration) startup prefs causes a crash. The main->build_commit_timestamp is 7956574615470342144 which seems suspicious. **Exact steps for others to reproduce the error** I guess you have to put the attached file in the userprefs area, but maybe any old userprefs tickles this bug on a Mac. Here is stack trace: - 0 0x00007fff8db4f6a6 in _st_fmt () - 1 0x00007fff8db4efec in strftime_l () - 2 0x0000000100cfbb3e in do_versions at /Users/trickey/src/blender/blender/source/blender/blenloader/intern/readfile.c:7935 - 3 0x0000000100cfaa11 in blo_read_file_internal at /Users/trickey/src/blender/blender/source/blender/blenloader/intern/readfile.c:10039 - 4 0x0000000100cf67f3 in BLO_read_from_file at /Users/trickey/src/blender/blender/source/blender/blenloader/intern/readblenentry.c:267 - 5 0x0000000100ab6b24 in BKE_read_file_userdef at /Users/trickey/src/blender/blender/source/blender/blenkernel/intern/blender.c:508 - 6 0x000000010001bc0f in wm_homefile_read at /Users/trickey/src/blender/blender/source/blender/windowmanager/intern/wm_files.c:570 - 7 0x000000010001e475 in WM_init at /Users/trickey/src/blender/blender/source/blender/windowmanager/intern/wm_init_exit.c:162 # 8 0x0000000100006435 in main at /Users/trickey/src/blender/blender/source/creator/creator.c:1638 I looked at filepath in BLO_read_from_file and its value is filepath const unsigned char * "/Users/trickey/Library/Application Support/Blender/2.69/config/userpref.blend" 0x00007fff5fbff0b0 I attach that file. [userpref.blend](https://archive.blender.org/developer/F27966/userpref.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @howardt

Added subscriber: @howardt
Author
Member

I meant to say that it is broken in a post-git migration build,
specifically one with last commit
f8eb006d09

Removing my old userprefs.blend file fixes the problem,
so this isn't an urgent bug to fix, but maybe want to
protect in code against null time structure returned from lib.

I meant to say that it is broken in a post-git migration build, specifically one with last commit f8eb006d091d598269fc10ae9e9ebf6c6be75dbd Removing my old userprefs.blend file fixes the problem, so this isn't an urgent bug to fix, but maybe want to protect in code against null time structure returned from lib.
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

I can't reproduce this on linux, guess it's related to OSX implementation.

I can't reproduce this on linux, guess it's related to OSX implementation.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Campbell Barton self-assigned this 2013-11-18 10:21:30 +01:00

Fixed r84c30edbdfe00bc3b8f39504c4dff5ab607f3ece

Developer note:
compiled debug glibc to see why getmtime returns NULL, the input value is overflowing.

Fixed r84c30edbdfe00bc3b8f39504c4dff5ab607f3ece Developer note: compiled debug glibc to see why getmtime returns NULL, the input value is overflowing.

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Added subscriber: @Sergey

Added subscriber: @Sergey

Reopening.

I'm not happy with this fix.

Howard, its not just wrong timestamp. It's also short SHA1 of the blender revision which is set to "own". This is not normal.

Now, couple of questions:

  • How did you produce such a file?
  • What do you see in the splash screen?
  • Please provide System Info
Reopening. I'm not happy with this fix. Howard, its not just wrong timestamp. It's also short SHA1 of the blender revision which is set to "own". This is not normal. Now, couple of questions: - How did you produce such a file? - What do you see in the splash screen? - Please provide System Info
Campbell Barton was unassigned by Sergey Sharybin 2013-11-18 10:31:18 +01:00
Sergey Sharybin self-assigned this 2013-11-18 10:31:18 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Author
Member

I thought this was a file that was saved as user prefs before the
git migration. It was mainly setting emulation of three-button mouse
and a couple theme changes, followed by 'Save User Preferences'.
I am pretty sure that it was saved pre-migration because my
runs started from XCode have --debug as argument always, and the
crash happened the first time I ran from XCode on my Mac after compiling
a git-checked-out source tree.

I tried to look at the splash screen before reporting the bug,
but it was blank where I expected to see the revision info
(unless I was being blind, as my wife sometimes accuses me of :)

The system is MacOS 10.9 (Mavericks), on a Macbook Pro several years old.
I think the XCode on the machine is up to date with the latest revision
but could check if that's important.

I thought this was a file that was saved as user prefs before the git migration. It was mainly setting emulation of three-button mouse and a couple theme changes, followed by 'Save User Preferences'. I am pretty sure that it was saved pre-migration because my runs started from XCode have --debug as argument always, and the crash happened the first time I ran from XCode on my Mac after compiling a git-checked-out source tree. I tried to look at the splash screen before reporting the bug, but it was blank where I expected to see the revision info (unless I was being blind, as my wife sometimes accuses me of :) The system is MacOS 10.9 (Mavericks), on a Macbook Pro several years old. I think the XCode on the machine is up to date with the latest revision but could check if that's important.

This issue was referenced by blender/blender-addons-contrib@53753c0ddc

This issue was referenced by blender/blender-addons-contrib@53753c0ddc947aa74246492fb76466198a28db58

This issue was referenced by 53753c0ddc

This issue was referenced by 53753c0ddc947aa74246492fb76466198a28db58

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 53753c0ddc.

Closed by commit 53753c0ddc.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37488
No description provided.