source/blender/makesdna/DNA_fileglobal_types.h
@@ -48,8 +48,8 @@ typedef struct FileGlobal {
 	struct Scene *curscene;
 	int fileflags;
 	int globalf;
-	unsigned long build_commit_timestamp;  /* commit timestamp from buildinfo */
-	char build_hash[12];  /* hash from buildinfo */
+	uint64_t build_commit_timestamp;  /* commit timestamp from buildinfo */
+	char build_hash[16];  /* hash from buildinfo */
 	/* file path where this was saved, for recover */
 	char filename[1024]; /* 1024 = FILE_MAX */
 } FileGlobal;
